chore(): Downgrade to JDK 1.8 (Java <= 8).