@@ -1,31 +1,48 @@
 package org.telematica.requests.platforms.tiktok;
 
-import org.telematica.constants.TikTokConstants;
+import  org.telematica.constants.TikTokConstants;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.util.concurrent.CompletableFuture;
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.ExecutionException;
 
 public class UserChannelRequest {
     public static String request(String channelId) throws ExecutionException, InterruptedException {
-        CompletableFuture<HttpResponse<String>> result;
+        HttpURLConnection connection = null;
         String channelUrl = TikTokConstants.TIKTOK_URL + "/" + channelId;
-        try (HttpClient client = HttpClient.newHttpClient()) {
-            String[] headersArray = org.telematica.utils.Map.toArray(TikTokConstants.TIKTOK_LIVE_HEADERS);
-            HttpRequest request = HttpRequest
-                    .newBuilder()
-                    .uri(URI.create(channelUrl))
-                    .version(HttpClient.Version.HTTP_2)
-                    .GET()
-                    .headers(headersArray)
-                    .build();
-            result = client.sendAsync(request, HttpResponse.BodyHandlers.ofString());
+        StringBuilder response = null;
+
+        try {
+            URL url = new URL(channelUrl);
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setUseCaches(false);
+
+            for(Map.Entry<String, String> header : TikTokConstants.TIKTOK_LIVE_HEADERS.entrySet()) {
+                connection.setRequestProperty(header.getKey(), header.getValue());
+            }
+
+            int responseCode = connection.getResponseCode();
+
+            if (responseCode == HttpURLConnection.HTTP_OK) {
+                BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+                String inputLine;
+                response = new StringBuilder();
+                while ((inputLine = in.readLine()) != null) {
+                    response.append(inputLine);
+                }
+                in.close();
+            } else {
+                System.out.println("POST request did not work. " + responseCode);
+            }
+
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
-        return result.get().body();
+        return Objects.requireNonNull(response).toString();
     }
 }
